added base template for round and rect, added digital/analog watchfaces

--- a/wearable/src/main/res/layout/rect_activity_main.xml
+++ b/wearable/src/main/res/layout/rect_activity_main.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rect_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.runningoutofbreadth.wearable.MainActivity"
     tools:deviceIds="wear_square">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
+    <include layout="@layout/info_panel"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_square" />
-</LinearLayout>
+        android:layout_gravity="center"/>
+
+</FrameLayout>
