--- a/wearable/src/main/res/layout/round_activity_main.xml
+++ b/wearable/src/main/res/layout/round_activity_main.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/round_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.runningoutofbreadth.wearable.MainActivity"
     tools:deviceIds="wear_round">
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
+    <include layout="@layout/info_panel"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_round" />
-</RelativeLayout>
+        android:layout_gravity="center"/>
+
+</FrameLayout>
