--- a/wearable/src/main/res/values/colors.xml
+++ b/wearable/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="background2">#000088</color>
     <color name="analog_hands">#cccccc</color>
     <color name="digital_text">#ffffff</color>
+
+    <color name="primary_dark">#0288D1</color>  <!-- 700 -->
 </resources>
